single-ami/cf-new-vpc.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Conditions": {
        "AllocateEip": {
            "Fn::Equals": [
                {
                    "Ref": "ExistingEipAllocationId"
                },
                ""
            ]
        }
    },
    "Description": "SonicWall NSv CloudFormation Template to deploy NSv in a new VPC",
    "Mappings" : {
        "RegionMap" : {
            "us-east-1" : {
                "SonicWallNSvPAYGR1511" : "ami-076ed83a6cb9f1983",
                "SonicWallNSvPAYGR1700" : "ami-0073f48559e480e1e",
                "SonicWallNSvPAYGR1833" : "ami-03b8e762fa5a399a2",
                "SonicWallNSvPAYGR2052" : "ami-0cf950b6e70f645f1",
                "SonicWallNSvPAYGR2267" : "ami-0c94d2d85cfb7687d",
                "SonicWallNSvR1511" : "ami-02f5001b44f22efe6",
                "SonicWallNSvR1519" : "ami-0902525105a9da073",
                "SonicWallNSvR1700" : "ami-046c4da4f6246c49c",
                "SonicWallNSvR1833" : "ami-0549f9eadb5c65891",
                "SonicWallNSvR2052" : "ami-0c1a86992ff2d205e",
                "SonicWallNSvR2267" : "ami-0585a5eef4427a3da"
            },
            "us-east-2" : {
                "SonicWallNSvPAYGR1511" : "ami-0ad9ce90071363f6c",
                "SonicWallNSvPAYGR1700" : "ami-021e9eb83af65dc11",
                "SonicWallNSvPAYGR1833" : "ami-07d9460bd5dba90b3",
                "SonicWallNSvPAYGR2052" : "ami-07e9c81ae4e879f51",
                "SonicWallNSvPAYGR2267" : "ami-0e680a271d56e2a61",
                "SonicWallNSvR1511" : "ami-0d332c158fae72772",
                "SonicWallNSvR1519" : "ami-0d4406104295911a9",
                "SonicWallNSvR1700" : "ami-0eb7320c42dda60a9",
                "SonicWallNSvR1833" : "ami-09d9c5b3389f6851f",
                "SonicWallNSvR2052" : "ami-0cb7d643da7768097",
                "SonicWallNSvR2267" : "ami-0b991ce20009ad66f"
            },
            "us-west-1" : {
                "SonicWallNSvPAYGR1511" : "ami-0bc2c0cc1288d5bd4",
                "SonicWallNSvPAYGR1700" : "ami-0ecf6e687d41a20b1",
                "SonicWallNSvPAYGR1833" : "ami-0b10384875f0212de",
                "SonicWallNSvPAYGR2052" : "ami-0e005b76d799d1b82",
                "SonicWallNSvPAYGR2267" : "ami-0500cf379a8446a85",
                "SonicWallNSvR1511" : "ami-0e0dddc9b899d2001",
                "SonicWallNSvR1519" : "ami-0ba053f3ae8017624",
                "SonicWallNSvR1700" : "ami-0fbeae142b8212e1e",
                "SonicWallNSvR1833" : "ami-0586b7cfc6efa37f3",
                "SonicWallNSvR2052" : "ami-04ff06c78538015c4",
                "SonicWallNSvR2267" : "ami-07c8a636febffe772"
            }
        }
    },
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "Project"
                    },
                    "Parameters": [
                        "ProjectName"
                    ]
                },
                {
                    "Label": {
                        "default": "Location"
                    },
                    "Parameters": [
                        "AvailabilityZone"
                    ]
                },
                {
                    "Label": {
                        "default": "Instance"
                    },
                    "Parameters": [
                        "AmiId",
                        "InstanceName",
                        "InstanceType",
                        "KeyPairName",
                        "ManagementWhitelistCidr",
                        "WanIfaceSubnetName",
                        "WanIfaceSubnetCidr",
                        "LanIfaceSubnetName",
                        "LanIfaceSubnetCidr",
                        "ExistingEipAllocationId"
                    ]
                },
                {
                    "Label": {
                        "default": "VPC"
                    },
                    "Parameters": [
                        "VpcName",
                        "VpcCidr"
                    ]
                }
            ],
            "ParameterLabels": {
                "AmiId": {
                    "default": "AMI"
                },
                "AvailabilityZone": {
                    "default": "Availability Zone"
                },
                "ExistingEipAllocationId": {
                    "default": "(Optional) Existing Elastic IP Address (EIP)"
                },
                "InstanceName": {
                    "default": "Instance Name"
                },
                "InstanceType": {
                    "default": "Instance Type"
                },
                "KeyPairName": {
                    "default": "Key Pair"
                },
                "LanIfaceSubnetCidr": {
                    "default": "LAN Interface Subnet CIDR"
                },
                "LanIfaceSubnetName": {
                    "default": "LAN Interface Subnet Name"
                },
                "ManagementWhitelistCidr": {
                    "default": "Allow management (ssh/http/https) from this CIDR"
                },
                "ProjectName": {
                    "default": "Project Name"
                },
                "VpcCidr": {
                    "default": "VPC CIDR"
                },
                "VpcName": {
                    "default": "VPC Name"
                },
                "WanIfaceSubnetCidr": {
                    "default": "WAN Interface Subnet CIDR"
                },
                "WanIfaceSubnetName": {
                    "default": "WAN Interface Subnet Name"
                }
            }
        }
    },
    "Outputs": {
        "ManagementSsh": {
            "Description": "Management Console (SSH) to manage NSv",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "ssh -i ",
                        {
                            "Ref": "KeyPairName"
                        },
                        ".pem",
                        " management@",
                        {
                            "Fn::GetAtt": [
                                "NSvInstance",
                                "PublicIp"
                            ]
                        }
                    ]
                ]
            }
        },
        "ManagementUrl": {
            "Description": "Management URL to manage NSv",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "https://",
                        {
                            "Fn::GetAtt": [
                                "NSvInstance",
                                "PublicIp"
                            ]
                        },
                        "/",
                        " username: admin, password: ",
                        {
                            "Ref": "NSvInstance"
                        }
                    ]
                ]
            }
        }
    },
    "Parameters": {
        "AmiId": {
            "Description": "SonicWall NSv AMI ID",
            "AllowedValues": ["SonicWallNSvPAYGR1511", "SonicWallNSvPAYGR1700", "SonicWallNSvPAYGR1833", "SonicWallNSvPAYGR2052", "SonicWallNSvPAYGR2267", "SonicWallNSvR1511", "SonicWallNSvR1519", "SonicWallNSvR1700", "SonicWallNSvR1833", "SonicWallNSvR2052", "SonicWallNSvR2267"],
            "Type": "String"
        },
        "AvailabilityZone": {
            "Description": "Select the AWS Availability Zone",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "ExistingEipAllocationId": {
            "Description": "Allocation ID of an existing Elastic IP (EIP). The EIP is associated to the WAN interface of the NSv. A new EIP will be allocated if left blank",
            "Type": "String"
        },
        "InstanceName": {
            "Default": "SonicWall NSv",
            "Description": "New NSv Instance Name",
            "Type": "String"
        },
        "InstanceType": {
            "AllowedValues": [
                "c5.large",
                "c5.xlarge",
                "c5.2xlarge",
                "c5.4xlarge"
            ],
            "Default": "c5.large",
            "Description": "Select the type of instance",
            "Type": "String"
        },
        "KeyPairName": {
            "Description": "Instance Key Pair Name",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "LanIfaceSubnetCidr": {
            "Default": "192.168.1.0/24",
            "Description": "Enter the CIDR for the subnet",
            "Type": "String"
        },
        "LanIfaceSubnetName": {
            "Default": "NSv LAN Interface",
            "Description": "Enter the name for the new subnet",
            "Type": "String"
        },
        "ManagementWhitelistCidr": {
            "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be in IPv4 CIDR notation: x.x.x.x/x",
            "Description": "Specify the CIDR from which management access (http,https,ssh) is allowed on WAN interface. Must be in IPv4 CIDR notation: x.x.x.x/x",
            "Type": "String"
        },
        "ProjectName": {
            "Default": "SonicWall NSv",
            "Description": "This will be in AWS resources tag",
            "Type": "String"
        },
        "VpcCidr": {
            "Default": "192.168.0.0/16",
            "Description": "VPC CIDR",
            "Type": "String"
        },
        "VpcName": {
            "Default": "NSv VPC",
            "Description": "New VPC Name",
            "Type": "String"
        },
        "WanIfaceSubnetCidr": {
            "Default": "192.168.0.0/24",
            "Description": "Enter the CIDR for the subnet",
            "Type": "String"
        },
        "WanIfaceSubnetName": {
            "Default": "NSv WAN Interface",
            "Description": "Enter the name for the new subnet",
            "Type": "String"
        }
    },
    "Resources": {
        "EipAssociation": {
            "Properties": {
                "AllocationId": {
                    "Fn::If": [
                        "AllocateEip",
                        {
                            "Fn::GetAtt": [
                                "NewEip",
                                "AllocationId"
                            ]
                        },
                        {
                            "Ref": "ExistingEipAllocationId"
                        }
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "NSvInstanceInterfaceWan"
                }
            },
            "Type": "AWS::EC2::EIPAssociation"
        },
        "NSvAttachGateway": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "NSvInternetGateway"
                },
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "NSvInstance": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone"
                },
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "VolumeType": "gp2"
                        }
                    }
                ],
                "EbsOptimized": "true",
                "ImageId": {
                    "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, {"Ref" : "AmiId"}]
                },
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "KeyName": {
                    "Ref": "KeyPairName"
                },
                "NetworkInterfaces": [
                    {
                        "DeviceIndex": 0,
                        "NetworkInterfaceId": {
                            "Ref": "NSvInstanceInterfaceWan"
                        }
                    }
                ],
                "SourceDestCheck": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "InstanceName"
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "NSvInstanceInterfaceLan": {
            "Properties": {
                "GroupSet": [
                    {
                        "Ref": "NSvSecGrpLan"
                    }
                ],
                "SourceDestCheck": "false",
                "SubnetId": {
                    "Ref": "NSvSubnetLan"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "InstanceName"
                                    },
                                    " Interface LAN"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "NSvInstanceInterfaceWan": {
            "Properties": {
                "GroupSet": [
                    {
                        "Ref": "NSvSecGrpWan"
                    }
                ],
                "SourceDestCheck": "false",
                "SubnetId": {
                    "Ref": "NSvSubnetWan"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "InstanceName"
                                    },
                                    " Interface WAN"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::NetworkInterface"
        },
        "NSvInterfaceAttachmentLan": {
            "Properties": {
                "DeviceIndex": 1,
                "InstanceId": {
                    "Ref": "NSvInstance"
                },
                "NetworkInterfaceId": {
                    "Ref": "NSvInstanceInterfaceLan"
                }
            },
            "Type": "AWS::EC2::NetworkInterfaceAttachment"
        },
        "NSvInternetGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "VpcName"
                                    },
                                    " GW"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::InternetGateway"
        },
        "NSvRouteLan": {
            "DependsOn": "NSvInternetGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NetworkInterfaceId": {
                    "Ref": "NSvInstanceInterfaceLan"
                },
                "RouteTableId": {
                    "Ref": "NSvRouteTableLan"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "NSvRouteTableLan": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "ProjectName"
                                    },
                                    "Route Table LAN"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "NSvRouteTableWan": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "ProjectName"
                                    },
                                    "Route Table WAN"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "NSvRouteWan": {
            "DependsOn": "NSvInternetGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "NSvInternetGateway"
                },
                "RouteTableId": {
                    "Ref": "NSvRouteTableWan"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "NSvSecGrpLan": {
            "Properties": {
                "GroupDescription": "Allow All Ingress",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": 0,
                        "IpProtocol": -1,
                        "ToPort": 65535
                    }
                ],
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "NSvSecGrpWan": {
            "Properties": {
                "GroupDescription": "Allow management (http/https/ssh) from Management white list CID, UDP 4500 and UDP 500 from all",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "ManagementWhitelistCidr"
                        },
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": {
                            "Ref": "ManagementWhitelistCidr"
                        },
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    },
                    {
                        "CidrIp": {
                            "Ref": "ManagementWhitelistCidr"
                        },
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "500",
                        "IpProtocol": "udp",
                        "ToPort": "500"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "4500",
                        "IpProtocol": "udp",
                        "ToPort": "4500"
                    }
                ],
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "NSvSubnetLan": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone"
                },
                "CidrBlock": {
                    "Ref": "LanIfaceSubnetCidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "LanIfaceSubnetName"
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "NSvSubnetLanRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "NSvRouteTableLan"
                },
                "SubnetId": {
                    "Ref": "NSvSubnetLan"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "NSvSubnetWan": {
            "Properties": {
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone"
                },
                "CidrBlock": {
                    "Ref": "WanIfaceSubnetCidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "WanIfaceSubnetName"
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "NSvVpc"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "NSvSubnetWanRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "NSvRouteTableWan"
                },
                "SubnetId": {
                    "Ref": "NSvSubnetWan"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "NSvVpc": {
            "Properties": {
                "CidrBlock": {
                    "Ref": "VpcCidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "VpcName"
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "ProjectName"
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        },
        "NewEip": {
            "Condition": "AllocateEip",
            "DependsOn": "NSvAttachGateway",
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        }
    }
}
